# hip-22-annotation-tool

./: .gitignore  AGENT.md  MODEL_CARD.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-windows-cpu.txt  requirements.txt
annotation_tool/: __init__.py  auto_detect_queue.py  auto_detection.py  completion.py  desktop.py  dicom_utils.py  heuristics.py  image_io.py  image_processing.py  measurements.py  paths.py  progress_report.py  render_cache.py  routes.py  scan_like.py  schema.py  server.py  storage.py  template_points.py  yolo_export.py
docs/: HIP22-使用指南.html  demo-video-script.md  hospital-user-guide.md  internal-data-prep.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md  release-notes-v0.3.0.md  release-notes-v0.3.1.md  release-notes-v0.3.2.md  release-notes-v0.3.3.md  release-notes-v0.3.4.md  windows-cpu-build.md  windows-zip-distribution.md
models/: yolo11n-best.metadata.json  yolo11n-best.pt  yolo11s-curriculum-stage2-dataset4-v2-best.json  yolo11s-curriculum-stage2-dataset4-v2-best.pt
scripts/: __init__.py  build_windows_cpu.ps1  export_shenton_training_set.py  package_zip.ps1  prepare_hospital_dataset.py  prepare_scan_like_images.py  prepare_shenton_seg_dataset.py  smoke_windows_package.ps1  train_shenton_seg.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_auto_detect_queue.py  test_completion.py  test_dicom_utils.py  test_heuristics.py  test_measurements.py  test_progress_report.py  test_render_cache.py  test_routes_workspace.py  test_scan_like.py  test_scan_like_script.py  test_schema.py  test_storage.py  (+2 more)
(+3 files in other folders)
